--- a/src/Resources/config/knpu_oauth2_client.yml
+++ b/src/Resources/config/knpu_oauth2_client.yml
@@ -3,7 +3,7 @@ knpu_oauth2_client:
   clients:
     oidc:
       # must be "keycloak" - it activates that type!
-      type: keycloak
+      type: azure
       # add and set these environment variables in your .env files
       client_id: '%con4gis.oauth.oidc.client_id%'
       client_secret: '%con4gis.oauth.oidc.client_secret%'
@@ -11,9 +11,7 @@ knpu_oauth2_client:
       redirect_route: connect_oidc_check
       redirect_params: { }
       # Oidc server URL
-      auth_server_url: '%con4gis.oauth.oidc.auth_server_url%'
-      # Oidc realm
-      realm: '%con4gis.oauth.oidc.realm%'
+      tenant: '%con4gis.oauth.oidc.auth_server_url%'
       # Optional: Encryption algorith, i.e. RS256
       # encryption_algorithm: null
       # Optional: Encryption key path, i.e. ../key.pem
