--- a/src/Resources/config/knpu_oauth2_client.yml
+++ b/src/Resources/config/knpu_oauth2_client.yml
@@ -12,6 +12,11 @@ knpu_oauth2_client:
       redirect_params: { }
       # Oidc server URL
       tenant: '%con4gis.oauth.oidc.auth_server_url%'
+
+      path_authorize: '/oauth2/v2.0/authorize'
+      path_token: '/oauth2/v2.0/token'
+      scope: {"idtoken"}
+
       # Optional: Encryption algorith, i.e. RS256
       # encryption_algorithm: null
       # Optional: Encryption key path, i.e. ../key.pem
